# EnoddGameEngine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO-list.html  discription.txt  project_struct.lua
Description/: Libraries  projects_structure_diagram.json
Doc/: TODO-list.html  arh_doc.md  error_handler_info.md  info  info.md  manager_info.ini  manager_info.md  teh_doc.md
Engine/Settings/: keys.jsonc
ReadMe/: README.md  project_struct  project_struct.csv  project_struct.lua
Src/: SnakeGame.cpp  game_loop.h  main.cpp
Src/Engine/: CMakeLists.txt  engine.cpp  engine.h  engine_data.h  main.cpp
Src/Engine/DATA/: enjine_settings.jsonc  vieport_settings.jsonc
Src/Engine/DATA/Inputs/: keyboard_settings.jsonc
Src/Engine/Data/: engine_settings.json  input.json  output.json  output.jsonc
Src/Engine/EngineEntity/Window/: vieport.h  vieport_manager.h  window.h
Src/Engine/GameEntity/: game_entity.h
Src/Engine/GameEntity/EngineEntity/: engine_entity.h
Src/Engine/GameLoop/: game_loop.h
Src/Engine/GameObjects/: game_objects.h
Src/Engine/Inputs/: inputs.h  keyboard_input.h  mouse_inputs.h
Src/Engine/Inputs/KeyboardInputs/: keyboard_input.h
Src/Engine/Inputs/MouseInputs/: mouse_inputs.h
Src/Engine/InputsOutputs/: input_output.cpp  input_output.h
Src/Engine/InputsOutputs/Inputs/: keyboard_inputs.h  mouse_inputs.h
Src/Engine/InputsOutputs/Outputs/: vieport.h
Src/Engine/JsonParser/: json_parser.cpp  json_parser.h
Src/Engine/Render/: render.h  render_data.h  shape.h
Src/Engine/Tools/: debugger.h
Src/Engine/VIeportManager/: vieport_manager.h
Src/Engine/VIeportManager/Vieport/: vieport.h
Src/Engine/VIeportManager/Vieport/Window/: window.h
Src/EngineData/: engine_data.h  engine_entity.h
Src/EngineData/Entity/: coord.h
Src/EngineError/: engine_error.h  engine_logging.h
Src/Game/TestPRJ/: Cube3D.cpp
Src/Managers/: manager_base.h  manager_inputs.h  manager_physics.h  manager_resourse.h  manager_scene.h  manager_settings.h
Src/Managers/ECS/: component_pool.h  component_storage.h  ecs_types.h  entity_base.h  entity_registr.h
Src/Managers/Engine/: entity_manager.h  manager_base.h  manager_entity.h  manager_inputs.h  manager_physics.h  manager_render.h  manager_resource.h  manager_scene.h  manager_settings.h
Src/Managers/Engine/Items/: font.h  model.h  texture.h
Src/Managers/Items/: audio.h
Src/Settings/: keys.jsonc  resourse_settings.json  viewport_settings.json  window_set.ini
Src/Tools/: interface.h
Src/Tools/Engine/: delegate.h  interface.h  json_reader.h
Tests/: main_test.cpp  test_manager_inputs.cpp  test_manager_inputs.h
Tools/Boost_JsonParser/: .gitignore  README.md
Tools/Boost_JsonParser/src/parser/: data.h  file_manager.cpp  file_manager.h  json_parser.h
src/: main.cpp
src/GameEngine/: Engine.h
src/GameEngine/AI/: AI  BehaviorTree.cpp
src/GameEngine/FileManager/Json_Parser/: JsonParser.h
src/GameEngine/GraphicsManager/: Render.h  RenderDATA.h  Renderer2D.h
src/GameEngine/SettingsEngine/: render_settings.json  settings.json
src/Libs/glad/include/glad/: glad.h
src/Libs/glad/src/: glad.c
src/Libs/glm/: CMakeLists.txt
